fixed 'white stripe' problem, with CSS - .carousel {overflow: hidden;}

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ article {
   width:100%;
   background-position:center center;
   background-size:cover;
+  overflow: hidden;
 }
 .slide-wrapper{display:inline;}
 .slide-wrapper .container{padding:0px;}
